# BetterBox-TTS

./: .gitignore  README.md  app.py  app_support.py  inference.py  pretrain_voice_builder.py  pyproject.toml  requirements.txt
OmniVoice/omnivoice/models/: asr_chunkformer.py  omnivoice.py
OmniVoice/omnivoice_inference/: ttsOmni.py
OmniVoice/omnivoice_inference/omnivoice_support/: ttsOmni_Config.py  voice_clone_prompt_cache.json
general/: config_path.txt  general_tool_audio.py  noise_detect_VAD.py  requirements-mac.txt  requirements.txt
modelTTSLocal/: Hướng dẫn.txt  conds.pt
pretrained/: LƯU Ý KHI TẠO PROFILE GIỌNG.txt  nang_vang_tren_mai_truong.txt
ui_app_Support/app_support/: app_model_management.py  app_support.py
viterbox/: demo_emotional_audio.py  tts.py  tts_generate_speech.py
viterbox/modelViterboxLocal/: conds.pt
viterbox/models/s3gen/: flow.py  s3gen.py
viterbox/models/t3/: llama_configs.py  t3.py
viterbox/models/t3/inference/: alignment_stream_analyzer.py
viterbox/pretrained/: LƯU Ý KHI TẠO PROFILE GIỌNG.txt
viterbox/tts_helper/: tts_extension.py  tts_numberToken.py  tts_precision.py  tts_support.py
wavs/: Lưu ý reference voice để tối ưu.txt  Nobita.txt  doraemon.txt  doremon-fix.txt  reference_sound.txt  vanh-leg-reference.txt  voice-3-tiktok.txt  voice-4-nguyetDuong.txt
